@@ -17,6 +17,9 @@ Release 2.0 - ???
 
 Release 1.14 - ???
 
+  * Maintain more significant digits in cells of "General" format
+    in XLS and XLSX (TIKA-2025).
+
   * Improve extraction of embedded documents for PPT, PPTX and XLSX
     (TIKA-2026).
 
